[package]
name = "qk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.2"
regex = "1.8.4"
config = "0.14.0"
strum = "0.26.2"
color-eyre = "0.6.3"
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
