[package]
name = "qk"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.2"
regex = "1.8.4"
config = "0.14.0"
strum = "0.26.2"
color-eyre = "0.6.3"
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.9.0"
thiserror = "2.0.12"

[dev-dependencies]
assert_cmd = "2"