[package]
name = "qk"
version = "0.1.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.29"
regex = "1.8.4"
config = "0.14.0"
strum = "0.26.2"
color-eyre = "0.6.3"
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.9.0"
thiserror = "2.0.12"
tui-piechart = "0.2.8"
reqwest = {version = "0.13.2", features= ["stream", "json", "blocking"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
zip = "0.6"
futures-util = "0.3"

[dev-dependencies]
assert_cmd = "2"
